splunk/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: splunk
  name: splunk
  namespace: splunk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: splunk
  strategy: {}
  template:
    metadata:
      labels:
        app: splunk
    spec:
      containers:
      - image: splunk/splunk:9.2.1@sha256:bad78f55af143d1be334076758fe0af197528812a96d746c7050f7315d91dd96
        name: splunk
        volumeMounts:
        - mountPath: /opt/splunk/var
          name: data
        - mountPath: /opt/splunk/etc
          name: etc
        - name: license
          mountPath: /run/secrets/splunk_license
          subPath: splunk_license
          readOnly: true
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        - containerPort: 8088
          name: hec
          protocol: TCP
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: splunk-data
      - name: etc
        persistentVolumeClaim:
          claimName: splunk-etc
      - name: license
        secret:
          secretName: splunk-license
