splunk/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: splunk
  name: splunk
  namespace: splunk
spec:
  ports:
  - port: 8000
    name: http
    protocol: TCP
    targetPort: 8000
  - port: 8088
    name: hec
    protocol: TCP
    targetPort: 8088
  selector:
    app: splunk
status:
  loadBalancer: {}
