splunk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: splunk
  name: splunk
  namespace: splunk
spec:
  rules:
  - host: splunk.sauerwein.se
    http:
      paths:
      - backend:
          service:
            name: splunk
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  - host: hec.sauerwein.se
    http:
      paths:
      - backend:
          service:
            name: https-hec
            port:
              name: hec
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - splunk.sauerwein.se
    - hec.sauerwein.se
    secretName: splunk-cert
